--- a/locale/en.yml
+++ b/locale/en.yml
@@ -1,5 +1,7 @@
 header-slideshow:
   admin:
+    TransitionTime: Speed of transitions between slides (default is 5 seconds)
+    TransitionTime-help: Put a number that indicates the transitions time (in seconds) between each slide
     TitleSlide1: Title for Slide 1
     TitleSlide1-help: Set here the title of your first slide
     TextSlide1: Text for your slide 1
